# polars-df-protocol

./: Makefile  pyproject.toml
.github/workflows/: python-tests.yaml
interchange/: _utils.py  buffer.py  column.py  dataframe.py  from_dataframe.py
tests/: test_from_dataframe.py
