[tool.poetry]
name = "polars-df-protocol"
version = "0.1.0"
description = ""
authors = ["Chris Pryer <cnpryer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.13.51"
numpy = "^1.23.2"
pyarrow = "^8.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
mypy = "^0.961"
isort = "^5.10.1"
black = "^22.6.0"
pandas = {git = "https://github.com/pandas-dev/pandas.git", rev = "main"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
